gcc/testsuite/gcc.dg/inline-21.c
/* Test -fno-gnu89-inline.  */
/* { dg-do compile } */
/* { dg-options "-fno-gnu89-inline" } */
/* { dg-error "is not supported" "" { target *-*-* } 0 } */
